--- a/GDMultiStashBuild/GDMultiStashBuild.csproj
+++ b/GDMultiStashBuild/GDMultiStashBuild.csproj
@@ -83,6 +83,7 @@ rmdir /s /q "$(TargetDir)GDMultiStash-v@(VersionNumber)\" 2&gt;nul
 xcopy "$(TargetDir)Release" "$(TargetDir)GDMultiStash-v@(VersionNumber)\"
 del /q "$(TargetDir)GDMultiStash-v@(VersionNumber)\*.xml"
 del /q "$(TargetDir)GDMultiStash-v@(VersionNumber)\*.pdb"
-del /q "$(TargetDir)GDMultiStash-v@(VersionNumber)\*.config"</PostBuildEvent>
+del /q "$(TargetDir)GDMultiStash-v@(VersionNumber)\*.config"
+del /q "$(TargetDir)GDMultiStash-v@(VersionNumber)\log.txt"</PostBuildEvent>
   </PropertyGroup>
 </Project>
